# Dimatech

./: .env  .env.docker  .gitignore   Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  database.py  exceptions.py  main.py  models.py
app/accounts/: dao.py  router.py  schemas.py
app/alembic/: env.py
app/alembic/versions/: 12df4141614a_create_payment_account_tables.py  5bc37a7bba15_create_user_table.py  c0d9fd343121_create_full_name_field.py  fd65f9b4797c_create_two_users.py
app/dao/: base.py
app/payments/: dao.py  router.py  schemas.py
app/users/: auth.py  dao.py  dependencies.py  router.py  schemas.py
app/webhook/: router.py  schemas.py
