[tool.poetry]
name = "jobtest"
version = "0.1.0"
description = ""
authors = ["Dbtzhv <denibatyzhev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
sqlalchemy = "^2.0.37"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
pydantic-settings = "^2.7.1"
email-validator = "^2.2.0"
greenlet = "^3.1.1"
bcrypt = "4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
